<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RechercheRvActivity"
    tools:showIn="@layout/activity_recherche_rv"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMois" />

    <Spinner
        android:id="@+id/spMois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textAnnee" />

    <Spinner
        android:id="@+id/spAnnee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <Button
        android:id="@+id/bAfficherListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAfficherLaListeDesRapports"
        android:onClick="afficherListe" />

</LinearLayout>